--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-router": "^5.1.19",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-tooltip": "^4.2.4",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
     "@types/uuid": "^9.0.0",
@@ -27,6 +28,7 @@
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
+    "react-tooltip": "^5.2.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
     "redux": "^4.2.0",
