--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/file-saver": "^2.0.5",
+    "@types/lodash": "^4.14.191",
+    "@types/memoize-one": "^5.1.2",
     "@types/react": "^18.0.26",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^18.0.9",
@@ -25,6 +27,8 @@
     "@types/uuid": "^9.0.0",
     "file-saver": "^2.0.5",
     "gh-pages": "^4.0.0",
+    "lodash": "^4.17.21",
+    "memorize-one": "^0.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -33,6 +37,7 @@
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
+    "react-singleton-hook": "^4.0.1",
     "react-tooltip": "^5.2.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
