--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/memoize-one": "^5.1.2",
     "@types/react": "^18.0.26",
     "@types/react-dnd": "^3.0.2",
+    "@types/react-dnd-touch-backend": "^0.5.0",
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.24",
     "@types/react-router": "^5.1.19",
@@ -30,8 +31,10 @@
     "lodash": "^4.17.21",
     "memorize-one": "^0.0.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.5",
